[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI/Theme/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/sprites/world/tilemap.png" type="Texture" id=2]
[ext_resource path="res://UI/Fonts/dpcomic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/logic/GUI.gd" type="Script" id=4]
[ext_resource path="res://UI/atlas_buttons.tres" type="Texture" id=5]
[ext_resource path="res://UI/atlas_buttons_hover.tres" type="Texture" id=6]
[ext_resource path="res://assets/audio/ui_click.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/lobby_music.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 96, 96 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 2 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 16 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="NinePatchRect" parent="."]
margin_left = 124.0
margin_top = 169.0
margin_right = 518.0
margin_bottom = 636.0
texture = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VContainer" type="VBoxContainer" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.0
margin_top = -158.5
margin_right = 129.0
margin_bottom = 157.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="TextureButton" parent="Container/VContainer"]
margin_top = 12.0
margin_right = 258.0
margin_bottom = 82.0
rect_min_size = Vector2( 258, 70 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="Container/VContainer/Easy"]
margin_left = 57.0
margin_top = 1.0
margin_right = 234.0
margin_bottom = 92.0
theme = SubResource( 3 )
text = "EASY"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Medium" type="TextureButton" parent="Container/VContainer"]
margin_top = 86.0
margin_right = 258.0
margin_bottom = 156.0
rect_min_size = Vector2( 258, 70 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="Container/VContainer/Medium"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.0
margin_top = -31.0
margin_right = 113.0
margin_bottom = 60.0
theme = SubResource( 3 )
text = "MEDIUM"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Hard" type="TextureButton" parent="Container/VContainer"]
margin_top = 160.0
margin_right = 258.0
margin_bottom = 230.0
rect_min_size = Vector2( 258, 70 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="Container/VContainer/Hard"]
margin_left = 57.0
margin_top = 1.0
margin_right = 234.0
margin_bottom = 92.0
theme = SubResource( 3 )
text = "HARD"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Help" type="TextureButton" parent="Container/VContainer"]
margin_top = 234.0
margin_right = 258.0
margin_bottom = 304.0
rect_min_size = Vector2( 258, 70 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="Container/VContainer/Help"]
margin_left = 57.0
margin_top = 1.0
margin_right = 234.0
margin_bottom = 92.0
theme = SubResource( 3 )
text = "HELP"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Title" type="Label" parent="."]
margin_left = 78.0
margin_top = 80.0
margin_right = 689.0
margin_bottom = 171.0
theme = SubResource( 4 )
text = "Spooky Business"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpInstructions" type="NinePatchRect" parent="."]
margin_left = 744.0
margin_top = 169.0
margin_right = 1138.0
margin_bottom = 636.0
texture = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="TextureRect" type="TextureRect" parent="HelpInstructions"]
margin_left = 34.0
margin_top = 38.0
margin_right = 367.0
margin_bottom = 439.0
texture = SubResource( 5 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="HelpInstructions"]
margin_left = 38.0
margin_top = 39.0
margin_right = 357.0
margin_bottom = 435.0
theme = ExtResource( 1 )
text = "USE W,A,S,D to Move
Left mouse button to shoot light.
Right mouse button to shoot fireballs.

Tips:
- Light from fire helps you out. Maybe you can light the Fireplace?

Objective:
Kids have taken over your house. Kill them all to take it back.

P.S. Be careful. There is a cat......
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UiClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0

[node name="Lobby" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0
[connection signal="focus_entered" from="." to="." method="_on_GUI_focus_entered"]
[connection signal="pressed" from="Container/VContainer/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="Container/VContainer/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="Container/VContainer/Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="Container/VContainer/Help" to="." method="_on_Help_pressed"]
